bugfix/RA-193-Profile-Overflow

--- a/frontend/src/ui/section/profile/Profile.scss
+++ b/frontend/src/ui/section/profile/Profile.scss
@@ -7,7 +7,6 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 24px;
-  overflow-x: hidden;
 
   .avatar {
     display: flex;
@@ -124,29 +123,25 @@
   }
 
   .languages {
-    &__title-container {
-      display: flex;
-      color: $rindus-dark-gray;
-      padding: 12px 16px;
-      align-items: center;
-      gap: 16px;
-      border-bottom: 1px solid $rindus-light-gray;
-    }
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
     &__title {
-      color: $rindus-dark-gray;
-      font-family: $font-poppins-regular;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 22px;
+      padding-left: 16px;
+    }
+    &__title-container {
+      color: #303140;
+      width: 100%;
+      border-bottom: 1px solid #dddde2;
+      padding-bottom: 12px;
     }
     &__tags-container {
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      display: inline-flex;
       padding: 16px;
-      width: 100%;
       gap: 12px;
     }
   }
